--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     </string-array>
 
     <string name="default_web_citement_secret">HQ2vZK-JQK3hgE2x3ZJdNy6B</string>
+    <string name="default_web_client_id">152068433081-untm2juk1ikl5p3pumr4g603705oel45.apps.googleusercontent.com</string>
 
 </resources>
