--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <string name="register_name">Full Name</string>
     <string name="register_email">E-mail</string>
+    <string name="register_contact_number">Contact Number</string>
     <string name="register_password">Password</string>
     <string name="register_confirm_password">Confirm Password</string>
     <string name="registerText">Register to BookVan</string>
