--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,36 @@
-
 <resources>
     <string name="app_name">BookVan</string>
     <string name="app_tagitemne">BookVan</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">You are not logged in.</string>
-    <string name="nav_header_subtitle">Please log in to use BookVan.</string>
+    <string name="nav_header_title">You are not signed in.</string>
+    <string name="nav_header_subtitle">Please sign in to use BookVan.</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_schedule">Schedule</string>
+    <string name="menu_van_companies">Van Companies</string>
+    <string name="menu_profile">Profile</string>
     <string name="menu_contact">Contact</string>
     <string name="menu_about">About BookVan</string>
     <string name="menu_logout">Logout</string>
     <string name="menu_login">Login</string>
     <string name="menu_register">Register</string>
 
-    <string name="register_name">Full Name</string>
-    <string name="register_email">E-mail</string>
-    <string name="register_contact_number">Contact Number</string>
-    <string name="register_password">Password</string>
-    <string name="register_confirm_password">Confirm Password</string>
-    <string name="registerText">Register to BookVan</string>
-    <string name="loginText">Login to BookVan</string>
+    <string name="input_fname">First Name</string>
+    <string name="input_lname">Last Name</string>
+    <string name="input_transport_name">Transport Name</string>
+    <string name="input_driver_name">Van Driver</string>
+    <string name="input_van_plate">Van Plate No.</string>
+    <string name="input_email">E-mail</string>
+    <string name="input_contact_number">Contact Number</string>
+    <string name="input_password">Password</string>
+    <string name="input_confirm_password">Confirm Password</string>
+    <string name="registerText">Sign Up</string>
+    <string name="loginText">Sign In</string>
+    <string name="redirLoginText"><u>Sign in here.</u></string>
+    <string name="redirRegisterText"><u>Sign up here.</u></string>
 
     <string name="title_book">Book</string>
     <string name="title_rent">Rent</string>
@@ -53,6 +60,6 @@
     </string-array>
 
     <string name="default_web_citement_secret">HQ2vZK-JQK3hgE2x3ZJdNy6B</string>
-<!--    <string name="default_web_client_id">152068433081-untm2juk1ikl5p3pumr4g603705oel45.apps.googleusercontent.com</string>-->
+    <!--    <string name="default_web_client_id">152068433081-untm2juk1ikl5p3pumr4g603705oel45.apps.googleusercontent.com</string>-->
 
 </resources>
