--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,10 @@
 <resources>
     <string name="app_name">BookVan</string>
-    <string name="app_tagitemne">BookVan</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">You are not signed in.</string>
     <string name="nav_header_subtitle">Please sign in to use BookVan.</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-
-    <string name="menu_home">Home</string>
-    <string name="menu_schedule">Schedule</string>
-    <string name="menu_van_companies">Van Companies</string>
-    <string name="menu_profile">Profile</string>
-    <string name="menu_contact">Contact</string>
-    <string name="menu_about">About BookVan</string>
-    <string name="menu_logout">Logout</string>
-    <string name="menu_login">Login</string>
-    <string name="menu_register">Register</string>
 
     <string name="input_fname">First Name</string>
     <string name="input_lname">Last Name</string>
@@ -34,14 +22,18 @@
     <string name="redirLoginText"><u>Sign in here.</u></string>
     <string name="redirRegisterText"><u>Sign up here.</u></string>
 
+    <string name="title_home">Home</string>
+    <string name="title_profile">Profile</string>
     <string name="title_book">Book</string>
     <string name="title_rent">Rent</string>
     <string name="title_schedule">Schedule</string>
+    <string name="title_contact">Contact</string>
+    <string name="title_van_companies">Van Companies</string>
     <string name="title_chat">Chat</string>
-
     <string name="title_book_admin">Bookings</string>
     <string name="title_rent_admin">Rentals</string>
     <string name="title_schedule_admin">Schedule</string>
+    <string name="title_about">About</string>
 
     <string-array name="destinations">
         <item>North - El Nido</item>
