--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="title_rent">Rent</string>
     <string name="title_schedule">Schedule</string>
     <string name="title_contact">Contact</string>
-    <string name="title_van_companies">Van Companies</string>
+    <string name="title_partners">Our Partners</string>
     <string name="title_chat">Chat</string>
     <string name="title_edit">Edit</string>
     <string name="title_book_admin">Bookings</string>
