--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name"><b>BookVan</b></string>
-    <string name="app_version">v1.2.36b</string>
+    <string name="app_version">v1.3.1b</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -44,6 +44,8 @@
     <string name="label_rent_admin">Rentals</string>
     <string name="label_scan_admin">Scan</string>
     <string name="label_schedule_admin">Schedule</string>
+
+    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus, odio eget placerat efficitur, metus enim lacinia quam, vel tristique velit orci nec eros. Cras dui libero, tincidunt ac bibendum et, scelerisque eget est. Aenean non accumsan quam. Fusce ultrices fringilla quam in rutrum. Nulla consectetur varius lacus eu euismod. Etiam dictum, ipsum non malesuada dictum, leo arcu viverra nisi, nec gravida tortor est non diam. Nulla a luctus elit. Cras posuere est ut dui imperdiet blandit. Proin semper fermentum urna, ut rhoncus nunc ultricies eget. Curabitur fringilla odio id ante porttitor, id condimentum neque bibendum. Donec vel massa nunc. Nunc odio neque, maximus quis tempor finibus, aliquet at arcu. Proin efficitur vehicula faucibus. Suspendisse interdum aliquet sapien, vel vestibulum lorem congue vitae. Mauris vitae mauris non neque pretium mollis. In scelerisque purus et dignissim malesuada.</string>
 
     <string-array name="rent_type">
         <item>Self-Drive</item>
