--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,11 @@
         <item>Rent Driver</item>
     </string-array>
 
+    <string-array name="category">
+        <item>North</item>
+        <item>South</item>
+    </string-array>
+
     <string-array name="destinations">
         <item>Abongan (Taytay)</item>
         <item>Aborlan</item>
