--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name"><b>BookVan</b></string>
     <string name="app_version">v1.3.9b</string>
 
+    <string name="facebook_app_id">6510615838955963</string>
+    <string name="fb_login_protocol_scheme">fb6510615838955963</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
